Update device outputName when setting output

BUG:451279
FIXED-IN:5.25.0


(cherry picked from commit d3a37aa9aef58fbaedcef77d2797c22a015dc9c0)