src/backends/libinput/device.cpp
@@ -668,8 +668,10 @@ void Device::setOutput(AbstractOutput *output)
 {
     m_output = output;
     if (m_output) {
+        m_outputName = output->name();
         writeEntry(ConfigKey::OutputName, output->name());
     } else {
+        m_outputName = QString();
         writeEntry(ConfigKey::OutputName, QString());
     }
     Q_EMIT outputNameChanged();
